Several fixes; add operation to enter AP mode; move todo list

--- a/src/admin/autowifi.html
+++ b/src/admin/autowifi.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
-	<title>Doodle3D</title>
+	<title>Wireless configuration</title>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="autowifi.js"></script>
-	<link href="autowifi.css" rel="stylesheet" type="text/css" />
+	<link href="/admin/autowifi.css" rel="stylesheet" type="text/css" />
 </head>
  
 <body>
