Add reconfiguration interface to support more generic and readable reconfiguring; fix js/jq URLs; misc minor fixes.

--- a/src/admin/autowifi.html
+++ b/src/admin/autowifi.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 	<title>Wireless configuration</title>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<script type="text/javascript" src="autowifi.js"></script>
+	<script type="text/javascript" src="/admin/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="/admin/autowifi.js"></script>
 	<link href="/admin/autowifi.css" rel="stylesheet" type="text/css" />
 </head>
  
@@ -28,10 +28,10 @@
 			<input id="wlan_btn_connect" disabled type="button" value="Connect" />
 		</form>
  	</div>
- 	
- 	<div class="catgroup">
+  	
+	<div class="catgroup">
  		<span class="cattitle">Known networks</span>
  		<div id="wlan_known_container"></div>
  	</div>
-</body>
+ </body>
 </html>
