--- a/src/ext/www/index.html
+++ b/src/ext/www/index.html
@@ -5,6 +5,6 @@
 <meta http-equiv="refresh" content="0; URL=/admin/autowifi.html" />
 </head>
 <body style="background-color: black">
-<a style="color: white; text-decoration: none" href="/admin/autowifi.html">LuCI - Lua Configuration Interface</a>
+<a style="color: white; text-decoration: none" href="/admin/autowifi.html">Doodle 3D - Wireless Network Configuration</a>
 </body>
 </html>
