Change require statements in code to reflect new structure; rename autowifi -> wifibox everywhere.

--- a/src/www/wifibox/index.html
+++ b/src/www/wifibox/index.html
@@ -3,5 +3,5 @@
 </head>
 <html><body>
 	<a href="updater.html">Updates</a><br />
-	<a href="autowifi.html">Wireless network management</a><br />
+	<a href="wifibox.html">Wireless network management</a><br />
 </body></html>
