--- a/src/www/captive.keep/index.html
+++ b/src/www/captive.keep/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="refresh" content="0; URL=/admin/autowifi.html" />
+<meta http-equiv="refresh" content="0; URL=/admin/wifibox.html" />
 </head>
 <body style="background-color: black">
-<a style="color: white; text-decoration: none" href="/admin/autowifi.html">Doodle 3D - Wireless Network Configuration</a>
+<a style="color: white; text-decoration: none" href="/admin/wifibox.html">Doodle 3D - Wireless Network Configuration</a>
 </body>
 </html>
