--- a/src/www/wifibox/wifibox.html
+++ b/src/www/wifibox/wifibox.html
@@ -4,8 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 	<title>Wireless configuration</title>
 	<script type="text/javascript" src="/admin/jquery-1.9.1.min.js"></script>
-	<script type="text/javascript" src="/admin/autowifi.js"></script>
-	<link href="/admin/autowifi.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript" src="/admin/wifibox.js"></script>
+	<link href="/admin/wifibox.css" rel="stylesheet" type="text/css" />
 </head>
  
 <body>
